// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render a default avatar 1`] = `
<div
  class="avatar one"
>
  <span
    alt="user"
    aria-hidden="false"
    aria-label="user"
    class="icon user"
    role="img"
  />
</div>
`;

exports[`Avatar should render an avatar with color variant seven 1`] = `
<div
  class="avatar seven"
>
  <span
    alt="multi-user"
    aria-hidden="false"
    aria-label="multi-user"
    class="icon user"
    role="img"
  />
</div>
`;

exports[`Avatar should render an avatar with custom props 1`] = `
<div
  class="avatar one"
  id="custom props avatar"
>
  <span
    alt="user"
    aria-hidden="false"
    aria-label="user"
    class="icon user"
    role="img"
  />
</div>
`;

exports[`Avatar should render an avatar with initials and aria hidden 1`] = `
<div
  class="avatar five"
  style="width:5em;height:5em"
>
  <span
    aria-hidden="true"
    class="initials"
  >
    JJ
  </span>
</div>
`;

exports[`Avatar should render an avatar with provided height and width 1`] = `
<div
  class="avatar five"
  style="width:5em;height:5em"
>
  <span
    alt="multi-user"
    aria-hidden="false"
    aria-label="multi-user"
    class="icon user"
    role="img"
  />
</div>
`;

exports[`Avatar should render an isDeceased avatar 1`] = `
<div
  class="avatar five is-deceased"
>
  <span
    alt="multi-user"
    aria-hidden="false"
    aria-label="multi-user"
    class="icon user"
    role="img"
  />
</div>
`;

exports[`Avatar should render fallback user avatar when invalid image is passed in 1`] = `
<div
  class="avatar five"
>
  <div>
    <div
      class="hidden"
    >
      <img
        alt="placeholder"
        class="image default image"
        src="https://path/to/invalid_image.jpg"
      />
    </div>
    <div>
      <span
        alt="placeholder"
        aria-hidden="false"
        aria-label="placeholder"
        class="icon user"
        role="img"
      />
    </div>
  </div>
</div>
`;

exports[`Avatar should render fallback user avatar when more than two initials are passed in 1`] = `
<div
  class="avatar one"
>
  <span
    alt="user"
    aria-hidden="false"
    aria-label="user"
    class="icon user"
    role="img"
  />
</div>
`;

exports[`Avatar should render image avatar when image is passed in 1`] = `
<div
  class="avatar five"
>
  <div>
    <div
      class="hidden"
    >
      <img
        alt="placeholder"
        class="image default image"
        src="test-file-stub"
      />
    </div>
    <div>
      <span
        alt="placeholder"
        aria-hidden="false"
        aria-label="placeholder"
        class="icon user"
        role="img"
      />
    </div>
  </div>
</div>
`;

exports[`Avatar should render one initial avatar when one initial is passed in 1`] = `
<div
  class="avatar one"
>
  <span
    aria-hidden="false"
    class="initials"
  >
    J
  </span>
</div>
`;

exports[`Avatar should render two initials avatar when two initials are passed in 1`] = `
<div
  class="avatar one"
>
  <span
    aria-hidden="false"
    class="initials"
  >
    JS
  </span>
</div>
`;
